tools/versioner/tests/compilation_error/headers/foo.h
#if defined(__cplusplus)
extern "C" {
#endif

#error foo

#if defined(__cplusplus)
}
#endif
